--- a/pages/info.html
+++ b/pages/info.html
@@ -16,51 +16,50 @@
                         <ul>
                             <li>
                                 <b>Name: </b>
-                                "Anthony Miles Martinez Cibraborn"
+                                Anthony Miles Martinez Cibraborn
                             </li>
                             <li>
                                 <b>Age: </b>
-                                "21"
+                                21
                             </li>
                             <li>
                                 <b>Gmail: </b>
-                                "marknival51@gmail.com"
+                                marknival51@gmail.com
                             </li>
                             <li>
                                 <b>Course & Year: </b>
-                                "BSCS - 3"
+                                BSCS - 3
                             </li>
                             <li>
                                 <b>Programming Languages Learned: </b>
-                                "C, C++, Java, C#, Assembly "
+                                C, C++, Java, C#, Assembly 
                             </li>
                             <li>
                                 <b>Crush: </b>
-                                "Secret!!!"
+                                Tangi
                             </li>
                             <li>
                                 <b>Hobbies and Interest: </b>
-                                "Sleeping, Watching Anime, Sleeping, Learn some new skills, Sleeping"
+                                Sleeping, Watching Anime, Sleeping, Learn some new skills, Sleeping
                             </li>
                             <li>
                                 <b>Favorite Foods: </b>
-                                "Fried Chicken, Adobo, Her, Pizza"
+                                Fried Chicken, Adobo, Her, Pizza
                             </li>
                             <li>
                                 <b>Favorite Movies: </b>
-                                "Your Name/Kimi No Nawa, Deadpool, The Gentlemen"
+                                Your Name/Kimi No Nawa, Deadpool, The Gentlemen
                             </li>
                             <li>
                                 <b>Current Address: </b>
-                                "Brgy. Guadalupe, Baybay, Leyte"
+                                Brgy. Guadalupe, Baybay, Leyte
                             </li>
                             <iframe 
                                 src="https://www.google.com/maps/place/10%C2%B044'13.0%22N+124%C2%B047'35.9%22E/@10.7368949,124.793265,20z/data=!4m4!3m3!8m2!3d10.736949!4d124.793315?entry=ttu&g_ep=EgoyMDI0MDgyOC4wIKXMDSoASAFQAw%3D%3D" 
                                 width="500" 
                                 height="120" 
                                 style="border:0;" 
-                                allowfullscreen 
-                                loading="lazy" 
+                                allowfullscreen ="true" 
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </ul>
