--- a/pages/info.html
+++ b/pages/info.html
@@ -55,15 +55,7 @@
                                 <b>Current Address: </b>
                                 Brgy. Guadalupe, Baybay, Leyte
                             </li>
-                            <iframe 
-                                src="https://www.google.com/maps/place/10%C2%B044'13.0%22N+124%C2%B047'35.9%22E/@10.7368949,124.793265,20z/data=!4m4!3m3!8m2!3d10.736949!4d124.793315?entry=ttu&g_ep=EgoyMDI0MDgyOC4wIKXMDSoASAFQAw%3D%3D" 
-                                width="500" 
-                                height="120" 
-                                style="border:0;" 
-                                allowfullscreen 
-                                loading="lazy" 
-                                referrerpolicy="no-referrer-when-downgrade">
-                            </iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1123.078857543351!2d124.79270150983187!3d10.73625920250959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3307975cd45806fb%3A0x1027b1a3db0835d1!2sGuadalupe%20Barangay%20Hall!5e0!3m2!1sen!2sph!4v1725522171530!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </ul>
                     </td>
                 </tr>
